# toyota-inventory

./: 4runners.json  README.md  get_cars.py  pages_build  partial.md  pyproject.toml  vehicles.json
.github/workflows/: python-app.yml  update.yml  website.yml
toyota_inventory/: app.py  freeze.py  get_4runners.py  get_cars.py
toyota_inventory/templates/: base.html  index.html  listing.html
