[tool.poetry]
name = "toyota-inventory"
version = "0.1.0"
description = ""
authors = ["Major Hayden <major@mhtx.net>"]
readme = "README.md"
packages = [{include = "toyota_inventory"}]

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
pandas = "^2.0.0"
flask = "^2.2.3"
frozen-flask = "^0.18"
requests = "^2.28.2"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get_4runners = 'toyota_inventory.get_4runners:main'
run_flask = 'toyota_inventory.app:main'